# picars

./: .gitignore  Cargo.toml  Cross.toml  README.md  justfile  ruff.toml
drishti/: Cargo.toml
drishti/src/: depth.rs  eyes.rs  lane.rs  lib.rs
dust/: .rustimport  Cargo.toml
dust/src/: lib.rs  main.rs
python/: camera_geometry.py  checks.py  lane_detector.py  lane_follower.py  temp.ipynb  temp.py  traffic_light.py  ultrasonic.py
ruspy/: Cargo.toml
ruspy/src/: drive.rs  i2c_pwm.rs  lib.rs
src/: main.rs
vahana/: .rustimport  Cargo.toml
vahana/src/: axel.rs  drive.rs  lib.rs  neck.rs
