[package]
name = "drishti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
anyhow = "1.0"
image = "0.24.7"
opencv = "0.84.5"

[dependencies.nokhwa]
version = "0.10.0"
# Use the native and v4l input backend
features = ["input-native"]
