[package]
name = "dust"
version = "0.1.0"
edition = "2021"

[lib]
name = "dust"
crate-type = ["cdylib"]

[dependencies]
rppal = "0.14.1"
anyhow = "1.0"
pyo3 = { version = "0.18.3", features = ["extension-module", "anyhow"] }

[dependencies.drishti]
path = "../drishti"

[dependencies.vahana]
path = "../vahana"

#[features]
#default = ["gui"]
#gui = ["drishti/gui"]
